Uploaded image for project: 'Qpid'
  1. Qpid
  2. QPID-5659

C++ not compiling (correctly) as C++11

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • 0.27, 0.28, 0.29
    • 0.28
    • C++ Broker, C++ Client
    • None
    • FreeBSD 10, Linux

    Description

      In order to avoid a compile bug with libc++ and boost you have to compile qpid as C++11 under FreeBSD 10.

      The current qpid code needs some small adjustments to compile correctly as C++11

      Attachments

        Issue Links

          Activity

            People

              astitcher Andrew Stitcher
              astitcher Andrew Stitcher
              Votes:
              0 Vote for this issue
              Watchers:
              5 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: