QPID-5659: Fixes to compile with C++11 (needed to compile with clang on FreeBSD 10) - shared_ptr no longer has a default conversion to bool. - Change in default destructor semantics: by default destructors are now   not allowed to throw exceptions. - stringstream no longer has a default conversion to string.

git-svn-id: https://svn.apache.org/repos/asf/qpid/branches/0.28@1584361 13f79535-47bb-0310-9956-ffa450edef68