qpid/cpp/src/tests/qpid-send.cpp
@@ -165,8 +165,7 @@ struct Options : public qpid::Options
             if (address.empty()) throw qpid::Exception("Address must be specified!");
             qpid::log::Logger::instance().configure(log);
             if (help) {
-                std::ostringstream msg;
-                std::cout << msg << *this << std::endl << std::endl
+                std::cout << *this << std::endl << std::endl
                           << "Drains messages from the specified address" << std::endl;
                 return false;
             } else {
@@ -241,7 +240,7 @@ class GetlineContentGenerator : public ContentGenerator {
   public:
     virtual bool setContent(Message& msg) {
         string content;
-        bool got = getline(std::cin, content);
+        bool got = !!getline(std::cin, content);
         if (got) msg.setContentObject(content);
         return got;
     }
